--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,7 +13,7 @@
         <li><a href="javascript:void(0)">Category</a></li>
         <li><a href="javascript:void(0)">Menu</a></li>
         <li><a href="javascript:void(0)">Testimonial</a></li>
-        <li><a href="javascript:void(0)">Contact</a></li>
+        <li><a  [routerLink]="['/login']" >Login </a></li>
       </ul>
       <h1 class="logo">Navbar</h1>
     </div>
