Created HTML and CSS of Home, Login, Products, Product Details, Cart and Checkout Pages.

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,164 @@
-<footer>
-  <p class="text-center"> &copy; All Copyrights Reserved {{date.getFullYear()}} </p>
-</footer>
+<main>
+  <div class="footer-offer">
+    <div class="container">
+      <div class="footer-offer-main">
+        <div class="offer-left">
+          <h3>Get 20% Discount For Subscriber</h3>
+          <p>Lorem ipsum dolor consectetur adipisicing accusantium</p>
+        </div>
+        <div class="offer-right">
+          <div class="email-area">
+            <div class="email-input"><input type="email" placeholder="Enter Your Email Address"></div>
+            <div class="email-btn"><button><i class="fa-solid fa-at"></i>Subscribe</button></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="service-area">
+    <div class="container">
+      <div class="service-main">
+        <div class="service-details">
+          <div class="service-icon"><span><i class="fas fa-truck"></i></span></div>
+          <div class="service-text">
+            <h3>Free Home Delivery</h3>
+            <p>Purchase minimum of Tk. 399 and get free home delivery from us in hole Chattogram
+              city.</p>
+          </div>
+        </div>
+        <div class="service-details">
+          <div class="service-icon"><span><i class="fas fa-sync-alt"></i></span></div>
+          <div class="service-text">
+            <h3>Return Policy</h3>
+            <p>We follow a standard return policy for consumers. Please read our return policy
+              guidelines for a better understanding.</p>
+          </div>
+        </div>
+        <div class="service-details">
+          <div class="service-icon"><span><i class="fas fa-headset"></i></span></div>
+          <div class="service-text">
+            <h3>Best Online Support</h3>
+            <p>If you are having issues purchasing any goods from us, we have strong online
+              support assistance to support you.</p>
+          </div>
+        </div>
+        <div class="service-details">
+          <div class="service-icon"><span><i class="fas fa-lock"></i></span></div>
+          <div class="service-text">
+            <h3>Get Best Offers</h3>
+            <p>Get daily offers, Monthly and weekly best offers from us. Save time and cost by
+              purchasing goods from us.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer-area">
+    <div class="container">
+      <div class="foooter-main">
+        <div class="footer-logo-info">
+          <div><img alt="" src="https://api.redgrocer.com/api/upload/images/red-grocer-limited-logo-a4bb.jpg"></div>
+          <div class="footer-logo-description">
+            <p>Red Grocer is a keystone of Bangladesh’s flourishing e-commerce sector. We offer
+              our services via a website and mobile app and also our smart shops. Red Grocer operates in the whole of
+              Chattogram city. We are working to make your life easier by saving your time and money. So we are making
+              our customers' lives easier by delivering their daily necessities. Red grocer believes customer trust is
+              the magnet that brings together our strengths and competencies. </p>
+          </div>
+        </div>
+        <div class="footer-contact">
+          <div class="footer-title">
+            <h3>Need Help?</h3>
+          </div>
+          <div class="footer-contact-main">
+            <div class="footer-contact-info"><span>Call Us</span>
+              <h3>+8809643207070</h3>
+            </div>
+            <div class="footer-contact-info"><span>Email Us</span>
+              <h3>admin@redgrocer.com</h3>
+            </div>
+            <div class="footer-contact-info"><span>Address</span>
+              <h3>411/412, 5th Floor, Business Tower, Khatungonj Road, Chittagong.</h3>
+            </div>
+            <div class="footer-contact-info cab"><span>Proud Member-
+                1685</span><a href="https://e-cab.net/company-profile/1685/red-grocer-limited" target="_blank"><img
+                  src="./assets/images/brand/png/e-Cab-Logo.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-link">
+          <div class="footer-title">
+            <h3>Support</h3>
+          </div>
+          <div class="footer-link-info">
+            <ul>
+              <li><a routerlink="/pages/about-us" href="/pages/about-us">About Us</a></li>
+              <li><a routerlink="./contact-us" href="/contact-us">Contact</a></li>
+              <li><a routerlink="./job-circular" href="/job-circular">Job
+                  Circular</a></li>
+              <li><a routerlink="/faq" href="/faq">Frequently asked
+                  questions</a></li>
+              <li><a routerlink="/pages/privacy-policy" href="/pages/privacy-policy">Privacy Policy </a></li>
+              <li><a routerlink="/pages/terms-and-conditions" href="/pages/terms-and-conditions">Terms and
+                  Conditions</a></li>
+              <li><a routerlink="/pages/return-&amp;-refund-policy" href="/pages/return-&amp;-refund-policy">Refund
+                  &amp; Return Policy</a></li>
+              <li><a routerlink="/apply-membership" href="/apply-membership">Full Membership</a></li>
+              <li><a routerlink="/complain-box" href="/complain-box">Complaint Box</a></li>
+            </ul>
+          </div>
+          <div class="social-link">
+            <div class="social-title">
+              <h3>Follow Us</h3>
+            </div>
+            <div class="social">
+              <ul>
+                <li><a target="_blank" href="https://www.facebook.com/RedGrocerLtd"><i
+                      class="fab fa-facebook-f"></i></a></li><!----><!---->
+                <li><a target="_blank" href="https://www.youtube.com/@RedGrocerLimited"><i
+                      class="fab fa-youtube"></i></a></li><!---->
+                <li><a target="_blank" href="https://twitter.com/GrocerRed"><i class="fab fa-twitter"></i></a></li>
+                <!---->
+                <li><a target="_blank" href="https://www.linkedin.com/company/red-grocer-limited/"><i
+                      class="fab fa-linkedin"></i></a></li><!---->
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="payment-area">
+          <div class="footer-contact-info">
+            <h3><b>Reg No.</b> CH-14449</h3>
+            <h3><b>DBID No:</b> 639273317</h3>
+          </div>
+          <div class="av-payment">
+            <h3>Available Payment Channels</h3>
+            <ul>
+              <li><img src="./assets/images/brand/png/ssl.png" alt="">
+              </li>
+              <li><img src="./assets/images/payments/Nagad-New.png" alt=""></li>
+              <li><img src="./assets/images/brand/png/Red-Grocer-footer-correction.png" alt=""></li>
+            </ul>
+          </div>
+          <div class="google">
+            <h3>Available On</h3>
+            <ul>
+              <li><a target="_blank" href="https://play.google.com/store/apps/details?id=com.app.redgroccer"><img
+                    src="./assets/images/brand/png/Google Play.png" alt=""></a></li><!---->
+              <li><a target="_blank" href="https://apps.apple.com/us/app/red-grocer/id1617964650"><img
+                    src="./assets/images/brand/png/App Store.png" alt=""></a></li><!---->
+            </ul>
+          </div>
+          <div class="carer">
+            <p>Download Our App from App/Play store to enjoy a special discount.</p><img routerlink="/job-circular"
+              src="./assets/images/brand/png/Career Opportunity.png" alt="" tabindex="0">
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="ntt">
+    <div class="container">
+      <p>@ {{date.getFullYear()}} Red Grocer All Right Reserved</p>
+    </div>
+  </div>
+</main>
