--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,13 +6,148 @@
   padding: 0;
   margin: 0;
 }
+
 body {
-  font-family: "Roboto", sans-serif !important ;
+  display: block;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+  font-family: Rubik, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 0;
+  margin: 0;
+  background-color: #f5f6f7
 }
-.text-center {
-  text-align: center !important;
+
+a {
+  text-decoration: none;
+  color: #000;
+  cursor: pointer
 }
-.footer-area {
-  background: rgb(238, 243, 243);
-  padding: 15px 0;
+
+a,
+button,
+img {
+  cursor: pointer
+}
+
+a:hover {
+  text-decoration: none;
+  color: #000;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  display: block;
+  margin: 0 !important
+}
+
+img {
+  display: block;
+  width: 100%
+}
+
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both
+}
+
+.container {
+  display: block;
+  max-width: 1400px;
+  width: 100%;
+  margin: auto
+}
+
+@media (max-width: 1400px) {
+  .container {
+    max-width: 1180px
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px
+  }
+}
+
+@media (max-width: 990px) {
+  .container {
+    max-width: 720px
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 540px
+  }
+}
+
+.view-btn {
+  display: block;
+  margin-top: 50px
+}
+
+.view-btn a {
+  background-color: #c92127;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 230px;
+  width: 100%;
+  margin: auto;
+  color: #fff;
+  font-family: Rubik, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  padding: 13px 15px;
+  box-sizing: border-box;
+  text-transform: uppercase;
+  gap: 5px;
+  border-radius: 6px;
+  border: 2px solid #c92127;
+  transition: all .3s linear
+}
+
+.view-btn a i {
+  font-size: 15px
+}
+
+.view-btn a:hover {
+  background-color: #fff;
+  color: #c92127
+}
+
+.title-area {
+  display: block;
+  margin-bottom: 33px;
+  text-align: center
+}
+
+.title-area h1 {
+  color: #c92127;
+  font-family: Rubik, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  display: block;
+  line-height: 50px
+}
+
+@media (max-width: 768px) {
+  .title-area h1 {
+    font-size: 28px;
+    line-height: 33px;
+    font-weight: 500
+  }
 }
